Add missing color for party "Die Linke"

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 "AfD": "#009ee0",
                 "Grüne": "#1aa037",
                 "FDP": "#ffed00",
+                "Linke": "#be3075",
                 "Sonstige": "#ccc",
             };
 
