--- a/index.html
+++ b/index.html
@@ -34,84 +34,11 @@
             var yAxis = d3.axisLeft(yScale)
                 .ticks(5);
 
-            var points = svg.append("g");
-
-
-            var S, V;
-
-            /*
-            var DISTRICTS = [
-                "Beiertheim-Bulach",
-                "Daxlanden",
-                "Durlach",
-                "Grötzingen",
-                "Grünwettersbach",
-                "Grünwinkel",
-                "Hagsfeld",
-                "Hohenwettersbach",
-                "Innenstadt-Ost",
-                "Innenstadt-West",
-                "Knielingen",
-                "Mühlburg",
-                "Neureut",
-                "Nordstadt",
-                "Nordweststadt",
-                "Oberreut",
-                "Oststadt",
-                "Palmbach",
-                "Rintheim",
-                "Rüppurr",
-                "Stupferich",
-                "Südstadt",
-                "Südweststadt",
-                "Waldstadt",
-                "Weiherfeld-Dammerstock",
-                "Weststadt",
-                "Wolfartsweier"
-            ];
-            */
-
-
-            /*
-            var statistics = [
-                {
-                    "id": "wahlbeteiligung",
-                    "domain": [0, 100],
-                    "values": {
-                        "Knielingen": 20,
-                        "Nordstadt": 60,
-                    },
-                },
-                {
-                    "id": "kinder-und-jugendliche",
-                    "domain": [0, 30],
-                    "values": {
-                        "Knielingen": 10,
-                        "Nordstadt": 20,
-                    },
-                }
-            ];
-            */
             var currentStatistic = 0;
 
             // Transition settings
             var t = d3.transition()
                 .duration(750);
-
-            /*
-            var votes = [
-                {"district": "Knielingen", "party": "CDU", "percentage": 20, "voteType": "Erststimme"},
-                {"district": "Knielingen", "party": "SPD", "percentage": 18, "voteType": "Erststimme"},
-                {"district": "Knielingen", "party": "CDU", "percentage": 19, "voteType": "Zweitstimme"},
-                {"district": "Knielingen", "party": "SPD", "percentage": 21, "voteType": "Zweitstimme"},
-                {"district": "Nordstadt", "party": "CDU", "percentage": 18, "voteType": "Erststimme"},
-                {"district": "Nordstadt", "party": "SPD", "percentage": 15, "voteType": "Erststimme"},
-                {"district": "Nordstadt", "party": "CDU", "percentage": 30, "voteType": "Zweitstimme"},
-                {"district": "Nordstadt", "party": "SPD", "percentage": 20, "voteType": "Zweitstimme"},
-            ];
-            */
-            var V;
-            var S;
 
             var partyColors = {
                 "CDU": "#000",
@@ -123,6 +50,29 @@
                 "Sonstige": "#ccc",
             };
 
+            var voteTypes = ['Erststimme', 'Zweitstimme'];
+
+            function getTickValues(min, max) {
+                var tickValues = [min, max];
+                var exp = Math.max(Math.floor(Math.log10(Math.abs(min))), Math.ceil(Math.log10(Math.abs(max))));
+                var step = Math.pow(10, exp);
+                var j = 0;
+                while (tickValues.length < 5 && step >= 1) {
+                    for (var i = Math.ceil(min / step) * step; i < max; i += step) {
+                        tickValues.push(i);
+                    }
+                    if (j === 0) {
+                      step /= 2;
+                    } else {
+                      step /= 5;
+                    }
+                    j = 1 - j;
+                    tickValues = unique(tickValues);
+              }
+              return tickValues;
+
+            }
+
             var voteSymbols = {
                 "Erststimme": d3.symbol().type(d3.symbolCircle),
                 "Zweitstimme": d3.symbol().type(d3.symbolTriangle),
@@ -132,20 +82,22 @@
                 if (error) {
                     throw error;
                 }
-                //console.log(statistics);
-                S = statistics;
 
                 d3.json("votes.json", function (error, votes) {
                     if (error) {
                         throw error;
                     }
-                    //console.log(votes);
-                    V = votes;
 
-                    function transformDatum (d) {
-                        var x = xScale(statistics[currentStatistic].values[d.district]);
-                        var y = yScale(d.percentage);
-                        return "translate(" + x + "," + y + ")";
+                    var partyVotes = {}
+                    for (var party in partyColors) {
+                        partyVotes[party] = {};
+                        for (var i = 0; i < voteTypes.length; i++) {
+                            partyVotes[party][voteTypes[i]] = [];
+                        }
+                    }
+                    for (var i = 0; i < votes.length; i++) {
+                        var vote = votes[i];
+                        partyVotes[vote.party][vote.type].push(vote);
                     }
 
                     svg.append("g")
@@ -156,32 +108,82 @@
                         .attr("class", "y axis")
                         .call(yAxis);
 
-                    points.selectAll()
-                        .data(votes)
-                        .enter().append("path")
-                            .attr("class", "point")
-                            .attr("d", function (d) { return voteSymbols[d.type](); })
-                            .attr('fill', function (d) { return partyColors[d.party]; })
-                            .attr("transform", transformDatum);
+                    var partyLines = {};
+                    for (var party in partyColors) {
+                        partyLines[party] = {};
+                        partyLines[party]['Erststimme'] = svg.append("path")
+                            .attr("class", "line")
+                            .attr("stroke", partyColors[party])
+                            .attr("fill", "none");
+                        partyLines[party]['Zweitstimme'] = svg.append("path")
+                            .attr("class", "line")
+                            .attr("stroke", partyColors[party])
+                            .attr("fill", "none");
+                    }
 
-                    d3.select('#button-next').on("click", function () {
-                        currentStatistic = (currentStatistic + 1) % statistics.length;
-                        console.log("currentStatistic = " + currentStatistic);
+                    function showStatistic(index) {
+                        index = index % statistics.length;
+                        currentStatistic = index;
+                        var statistic = statistics[index];
 
-                        xScale.domain(statistics[currentStatistic].domain);
+                        xScale.domain(statistic.domain);
+                        xAxis.tickValues(getTickValues(statistic.domain[0], statistic.domain[1]));//xScale.ticks(5).concat(xScale.domain()));
                         svg.selectAll(".x.axis")
                             .transition(t)
                             .call(xAxis);
 
                         svg.selectAll(".point")
                             .data(votes)
-                            .transition(t)
-                            .attr("transform", transformDatum);
+                            .enter().append("path")
+                                .attr("class", "point")
+                                .attr("d", function (d) { return voteSymbols[d.type](); })
+                                .attr('fill', function (d) { return partyColors[d.party]; })
 
-                        d3.select('#statistic-title').html(statistics[currentStatistic].title);
+                        svg.selectAll(".point")
+                            .data(votes)
+                            .transition(t)
+                            .attr("transform", function (d) {
+                                var x = xScale(statistic.values[d.district]);
+                                var y = yScale(d.percentage);
+                                return "translate(" + x + "," + y + ")";
+                            });
+
+                        var line = d3.line()
+                            .x(function (d) { return xScale(statistic.values[d.district]); })
+                            .y(function (d) { return yScale(d.percentage); });
+
+                        for (var party in partyVotes) {
+                            for (var i = 0; i < voteTypes.length; i++) {
+                                var vs = partyVotes[party][voteTypes[i]];
+                                vs.sort(function (v1, v2) { return statistic.values[v1.district] - statistic.values[v2.district]; });
+                                partyLines[party][voteTypes[i]].transition(t)
+                                    .attr("d", line(vs));
+                            }
+                        }
+
+                        d3.select('#statistic-title').html(statistic.title);
+                    }
+
+                    d3.select('#button-next').on("click", function () {
+                        showStatistic(currentStatistic + 1);
                     });
+
+                    showStatistic(currentStatistic);
                 });
             });
+
+
+            // From https://stackoverflow.com/a/11911532/857390
+            function unique(arr) {
+                var u = {}, a = [];
+                for(var i = 0, l = arr.length; i < l; ++i){
+                    if(!u.hasOwnProperty(arr[i])) {
+                        a.push(arr[i]);
+                        u[arr[i]] = 1;
+                    }
+                }
+                return a;
+            }
 
 
 
