--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <meta charset="utf-8" />
         <title>Die Bundestagswahl 2017 in den Karlsruher Stadtteilen</title>
         <script src="vendor/d3.v4.min.js"></script>
+        <script src="vendor/simple-statistics.v5.0.0.min.js"></script>
+
+        <style>
+            .point, .dimmed {
+                opacity: 0.2;
+            }
+
+            .highlighted {
+                opacity: 1.0;
+            }
+        </style>
     </head>
     <body>
         <button id="button-next">Next</button>
@@ -50,8 +61,6 @@
                 "Sonstige": "#ccc",
             };
 
-            var voteTypes = ['Erststimme', 'Zweitstimme'];
-
             function getTickValues(min, max) {
                 var tickValues = [min, max];
                 var exp = Math.max(Math.floor(Math.log10(Math.abs(min))), Math.ceil(Math.log10(Math.abs(max))));
@@ -78,6 +87,16 @@
                 "Zweitstimme": d3.symbol().type(d3.symbolTriangle),
             }
 
+            function mouseIn(party) {
+                d3.selectAll(".line").classed("dimmed", true);
+                d3.selectAll("." + party).classed("highlighted", true);
+            }
+
+            function mouseOut() {
+                d3.selectAll(".line").classed("dimmed", false);
+                d3.selectAll("*").classed("highlighted", false);
+            }
+
             d3.json("statistics.json", function (error, statistics) {
                 if (error) {
                     throw error;
@@ -90,14 +109,10 @@
 
                     var partyVotes = {}
                     for (var party in partyColors) {
-                        partyVotes[party] = {};
-                        for (var i = 0; i < voteTypes.length; i++) {
-                            partyVotes[party][voteTypes[i]] = [];
-                        }
+                        partyVotes[party] = [];
                     }
                     for (var i = 0; i < votes.length; i++) {
-                        var vote = votes[i];
-                        partyVotes[vote.party][vote.type].push(vote);
+                        partyVotes[votes[i].party].push(votes[i]);
                     }
 
                     svg.append("g")
@@ -108,39 +123,43 @@
                         .attr("class", "y axis")
                         .call(yAxis);
 
+                    svg.selectAll(".point")
+                        .data(votes)
+                        .enter().append("path")
+                            .attr("class", function (d) { return "point " + d.party; })
+                            .attr("d", function (d) { return voteSymbols[d.type](); })
+                            .attr('fill', function (d) { return partyColors[d.party]; })
+
                     var partyLines = {};
                     for (var party in partyColors) {
-                        partyLines[party] = {};
-                        partyLines[party]['Erststimme'] = svg.append("path")
-                            .attr("class", "line")
-                            .attr("stroke", partyColors[party])
-                            .attr("fill", "none");
-                        partyLines[party]['Zweitstimme'] = svg.append("path")
-                            .attr("class", "line")
-                            .attr("stroke", partyColors[party])
-                            .attr("fill", "none");
+                        (function (party) {
+                            partyLines[party] = svg.append("line")
+                                .attr("class", "line " + party)
+                                .attr("stroke", partyColors[party])
+                                .attr("stroke-width", 7)
+                                .attr("fill", "none")
+                                .on("mouseover", function () { mouseIn(party); })
+                                .on("mouseout", mouseOut);
+                        })(party);
                     }
 
                     function showStatistic(index) {
                         index = index % statistics.length;
                         currentStatistic = index;
                         var statistic = statistics[index];
+                        var min = d3.min(d3.values(statistic.values));
+                        var max = d3.max(d3.values(statistic.values));
 
                         xScale.domain(statistic.domain);
-                        xAxis.tickValues(getTickValues(statistic.domain[0], statistic.domain[1]));//xScale.ticks(5).concat(xScale.domain()));
+                        xAxis.tickValues(getTickValues(statistic.domain[0], statistic.domain[1]));
                         svg.selectAll(".x.axis")
                             .transition(t)
                             .call(xAxis);
 
                         svg.selectAll(".point")
                             .data(votes)
-                            .enter().append("path")
-                                .attr("class", "point")
-                                .attr("d", function (d) { return voteSymbols[d.type](); })
-                                .attr('fill', function (d) { return partyColors[d.party]; })
-
-                        svg.selectAll(".point")
-                            .data(votes)
+                            .on("mouseover", function (d) { mouseIn(d.party); })
+                            .on("mouseout", mouseOut)
                             .transition(t)
                             .attr("transform", function (d) {
                                 var x = xScale(statistic.values[d.district]);
@@ -148,17 +167,19 @@
                                 return "translate(" + x + "," + y + ")";
                             });
 
-                        var line = d3.line()
-                            .x(function (d) { return xScale(statistic.values[d.district]); })
-                            .y(function (d) { return yScale(d.percentage); });
-
                         for (var party in partyVotes) {
-                            for (var i = 0; i < voteTypes.length; i++) {
-                                var vs = partyVotes[party][voteTypes[i]];
-                                vs.sort(function (v1, v2) { return statistic.values[v1.district] - statistic.values[v2.district]; });
-                                partyLines[party][voteTypes[i]].transition(t)
-                                    .attr("d", line(vs));
+                            var points = [];
+                            var pvs = partyVotes[party];
+                            for (var i = 0; i < pvs.length; i++) {
+                                var pv = pvs[i];
+                                points.push([statistic.values[pv.district], pv.percentage]);
                             }
+                            var line = ss.linearRegressionLine(ss.linearRegression(points));
+                            partyLines[party].transition(t)
+                                .attr("x1", xScale(min))
+                                .attr("y1", yScale(line(min)))
+                                .attr("x2", xScale(max))
+                                .attr("y2", yScale(line(max)));
                         }
 
                         d3.select('#statistic-title').html(statistic.title);
