--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             .attr("y", 6)
                             .attr("dy", ".71em")
                             .style("text-anchor", "end")
-                            .text("Stimmenanteil");
+                            .text("Stimmenanteil (%)");
 
                     svg.selectAll(".point")
                         .data(votes)
