--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 display: inline-block;
                 width: calc(100% - 100px);
                 padding: 0 20px;
-                margin-bottom: 30px;
+                margin-bottom: 50px;
             }
 
             svg {
@@ -113,32 +113,33 @@
             }
 
             #footer {
-                font-size: 15px;
-                padding: 20px;
-                color: #ddd;
-                background-color: #555;
+                font-size: 12px;
+                color: #555;
                 clear: both;
                 width: 100%;
                 min-height: 150px;
+                padding: 20px;
             }
 
             #footer a {
-                color: #ddd;
+                color: #555;
                 font-weight: bold;
                 text-decoration: none;
             }
             #footer a:hover {
-                color: #ddd;
+                color: #555;
                 text-decoration: underline;
             }
 
             #footer img {
                 width: 100px;
-                float: left;
+                display: block;
+                margin: 0 auto;
             }
 
             #footer p {
-                margin-left: 120px;
+                text-align: center;
+                margin: 0.5em 0 0 0;
             }
 
             h1 {
