--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 min-height: 300px;
                 max-height: 500px;
                 display: block;
+                margin-top: 30px;
             }
 
             #container {
@@ -213,6 +214,10 @@
     <body>
         <div id="container">
             <h1>Die Bundestagswahl 2017 in den Karlsruher Stadtteilen</h1>
+            <div id="legend">
+                <p>Jeder Karlsruher Stadtteil ist anders &mdash; wie hat sich das auf die Wahl ausgewirkt? Wir haben uns das an Hand verschiedener Statistiken genauer angeschaut.</p>
+                <p>Im Diagramm stehen &#9679; und &#9650; für die Erst- und Zweitstimmenanteile der verschiedenen Parteien in den einzelnen Stadtteilen, die Linien veranschaulichen die Trends. Wenn Du mit der Maus über die Punkte fährst bekommst Du Details angezeigt.</p>
+            </div>
             <svg></svg>
             <div>
                 <div id="control">
