Add README and LICENSE

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
         <title>Die Bundestagswahl 2017 in den Karlsruher Stadtteilen</title>
 
-        <script src="vendor/d3.v4.min.js"></script>
-        <script src="vendor/simple-statistics.v5.0.0.min.js"></script>
+        <script src="vendor/d3/d3.v4.min.js"></script>
+        <script src="vendor/simple-statistics/simple-statistics.v5.0.0.min.js"></script>
         <script src="vendor/d3-tip/d3-tip.js"></script>
-        <script src="vendor/hammer.min.js"></script>
+        <script src="vendor/hammer/hammer.min.js"></script>
 
         <style>
             html {
