--- a/index.html
+++ b/index.html
@@ -82,13 +82,11 @@
                 display: block;
                 width: 50px;
                 height: 50px;
-                line-height: 50px;
-                text-align: center;
-                font-size: 50px;
-                color: #555;
-                background-size: 75% 75%;
-                background-repeat: no-repeat;
-                background-position: center;
+            }
+
+            .button svg {
+                stroke: #000;
+                stroke-width: 0.2;
             }
 
             #control {
@@ -101,13 +99,11 @@
             #button-prev {
                 position: absolute;
                 left: 0;
-                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
             }
 
             #button-next {
                 position: absolute;
                 right: 0;
-                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
             }
 
             #subtitle {
@@ -128,7 +124,7 @@
                 }
             }
 
-            svg {
+            #chart {
                 width: 100%;
                 height: 50vh;
                 min-height: 300px;
@@ -209,6 +205,27 @@
                 color: #000;
             }
 
+            .pulse svg {
+                animation: pulse 1.5s infinite ease-in-out alternate;
+            }
+
+            @keyframes pulse {
+                0% {
+                    fill: #000;
+                }
+                100% {
+                    fill: #aaa;
+                }
+            }
+
+            .button:hover svg {
+                fill: #fff;
+            }
+
+            .button.pulse:hover svg {
+                animation: none;
+            }
+
         </style>
     </head>
     <body>
@@ -218,12 +235,16 @@
                 <p>Jeder Karlsruher Stadtteil ist anders &mdash; wie hat sich das auf die Wahl ausgewirkt? Wir haben uns das an Hand verschiedener Statistiken genauer angeschaut.</p>
                 <p>Im Diagramm stehen &#9679; und &#9650; für die Erst- und Zweitstimmenanteile der verschiedenen Parteien in den einzelnen Stadtteilen, die Linien veranschaulichen die Trends. Wenn Du mit der Maus über die Punkte fährst bekommst Du Details angezeigt.</p>
             </div>
-            <svg></svg>
+            <svg id="chart"></svg>
             <div>
                 <div id="control">
-                    <a href="#" class="button" id="button-prev"></a>
+                    <a href="#" class="button" id="button-prev">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="%23000" viewBox="0 0 8 8"><path d="M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z"/></svg>
+                    </a>
                     <h2 id="subtitle"></h2>
-                    <a href="#" class="button" id="button-next"></a>
+                    <a href="#" class="button pulse" id="button-next">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="%23000" viewBox="0 0 8 8"><path d="M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z"/></svg>
+                    </a>
                 </div>
                 <div id="analysis"></div>
                 <div id="source">
@@ -241,14 +262,14 @@
             var MARGIN = {top: 20, right: 10, bottom: 20, left: 20};
 
             function width() {
-                return d3.select("svg").node().getBoundingClientRect().width - MARGIN.left - MARGIN.right;
+                return d3.select("#chart").node().getBoundingClientRect().width - MARGIN.left - MARGIN.right;
             }
 
             function height() {
-                return d3.select("svg").node().getBoundingClientRect().height - MARGIN.top - MARGIN.bottom;
+                return d3.select("#chart").node().getBoundingClientRect().height - MARGIN.top - MARGIN.bottom;
             }
 
-            var svg = d3.select("svg")
+            var svg = d3.select("#chart")
                 .append("g")
                     .attr("transform", "translate(" + MARGIN.left + "," + MARGIN.top + ")");
 
@@ -377,7 +398,7 @@
                         .enter().append("path")
                             .attr("class", function (d) { return "point " + d.party; })
                             .attr("d", function (d) { return voteSymbols[d.type](); })
-                            .attr('fill', function (d) { return partyColors[d.party]; })
+                            .attr("fill", function (d) { return partyColors[d.party]; })
 
                     svg.call(tip);
 
@@ -445,24 +466,25 @@
                             .html(statistic.label);
 
                         tip.html(function(d) {
-                            return '<div class="district">' + d.district + '</div>' +
-                                   '<div class="vote">' + d.type + ' ' + d.party + ' (%): ' + d.percentage + '</div>' +
-                                   '<div class="statistic">' + statistic.label + ': ' + statistic.values[d.district] + '</div>';
+                            return '<div class="district">' + d.district + "</div>" +
+                                   '<div class="vote">' + d.type + " " + d.party + " (%): " + d.percentage + "</div>" +
+                                   '<div class="statistic">' + statistic.label + ": " + statistic.values[d.district] + "</div>";
                         });
                     }
 
-                    d3.select('#button-next').on("click", function () {
+                    d3.select("#button-next").on("click", function () {
                         d3.event.preventDefault();
+                        d3.select("#button-next").classed("pulse", false);
                         showStatistic(currentStatistic + 1, true);
                     });
-                    d3.select('#button-prev').on("click", function () {
+                    d3.select("#button-prev").on("click", function () {
                         d3.event.preventDefault();
                         showStatistic(currentStatistic - 1, true);
                     });
 
                     delete Hammer.defaults.cssProps.userSelect; // Allow text selection
                     var hammer = new Hammer(document.body, { inputClass: Hammer.TouchInput });
-                    hammer.on('swipe', function(e) {
+                    hammer.on("swipe", function(e) {
                         if (e.deltaX > 0) {
                             showStatistic(currentStatistic - 1, true);
                         } else {
