--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         <div id="container">
             <h1>Die Bundestagswahl 2017 in den Karlsruher Stadtteilen</h1>
             <div id="legend">
-                <p>Jeder Karlsruher Stadtteil ist anders &mdash; wie hat sich das auf die Wahl ausgewirkt? Wir haben uns das an Hand verschiedener Statistiken genauer angeschaut.</p>
-                <p>Im Diagramm stehen &#9679; und &#9650; für die Erst- und Zweitstimmenanteile der verschiedenen Parteien in den einzelnen Stadtteilen, die Linien veranschaulichen die Trends. Wenn Du mit der Maus über die Punkte fährst bekommst Du Details angezeigt.</p>
+                <p>Jeder Karlsruher Stadtteil ist anders &mdash; wie hat sich das auf die Wahl ausgewirkt? Wir haben uns das anhand verschiedener Statistiken genauer angeschaut.</p>
+                <p>Im Diagramm stehen &#9679; und &#9650; für die Erst- und Zweitstimmenanteile der verschiedenen Parteien in den einzelnen Stadtteilen, die Linien veranschaulichen die Trends. Wenn Du mit der Maus über die Punkte fährst, bekommst Du Details angezeigt.</p>
             </div>
             <svg id="chart"></svg>
             <div>
